# Meow2Text

./: .gitignore  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  app.py  env.example  main.py  pyproject.toml  quick_start.sh  requirements.txt  setup.py  setup_local_llm.sh  start_frontend.sh  test_local_llm.py
backend/src/: main.py
backend/src/api/: __init__.py  routes.py
backend/src/core/: config.py
backend/src/models/: __init__.py
backend/src/services/: audio_service.py  classification_service.py  translation_service.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: AudioRecorder.tsx  PersonalitySelector.tsx  TranslationResult.tsx
frontend/src/services/: api.ts
src/: __init__.py  main.py
src/api/: routes.py
src/core/: __init__.py  config.py  exceptions.py
src/models/: schemas.py
src/services/: __init__.py  audio_service.py  classification_service.py  translation_service.py
utils/: __init__.py  audio.py  classification.py  translation.py
